--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -66,9 +66,7 @@
 							<img src="{% static 'sensait/logos/Sensait_logo_big.png' %} " class="img-responsive" alt="feature img">
               <br/><br/><br/>
 
-              <a href="logins/" target="_self" ><button type="button" class="btn btn-warning btn-lg">LOGIN </button></a>
-
-              <a href="dash/main/" target="_self" ><button type="button" class="btn btn-info btn-lg">PANEL SENSAIT </button></a>
+              <a href="logins/" target="_self" ><button type="button" class="btn btn-info btn-lg">INICIAR SESIÓN </button></a>
               <br/>
               <br/>
 
