--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -358,11 +358,9 @@
 
         <li class="header">CLIENTES</li>
         <li><a href="{% url 'projects' %}"><i class="fa fa-laptop"></i> <span>Proyectos</span></a></li>
-
-        <li class="header">Sesion</li>
-        <li><a href="{% url 'logout' %}"><i class="fa fa-laptop"></i> <span>Cerrar Sesión</span></a></li>
-
       {% endif %}
+      <li class="header">Sesion</li>
+      <li><a href="http://sensait.dyndns.org" target="_self"><i class="fa fa-laptop"></i> <span>Cerrar Sesión</span></a></li>
     </ul>
   </section>
   <!-- /.sidebar -->
