--- a/templates/system/login/login.html
+++ b/templates/system/login/login.html
@@ -31,10 +31,10 @@
 
   <div class="login-box">
     <div class="login-logo">
-      <a href="#"><b>ADU LOGIN</a>
+      <img src="{% static 'sensait/logos/Sensait_logo.png' %}" class="user-image" alt="User Image">
     </div><!-- /.login-logo -->
     <div class="login-box-body">
-      <p class="login-box-msg">Inicia sesión</p>
+      <p class="login-box-msg">Inicio de sesión</p>
 
 
 
@@ -53,21 +53,11 @@
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="row">
-          <div class="col-xs-8">
-            <div class="checkbox icheck">
-              <label>
-                <input type="checkbox"> Recordarme
-              </label>
-            </div>
-          </div><!-- /.col -->
-          <div class="col-xs-4">
+          <div class="col-xs-5">
             <button type="submit" class="btn btn-primary btn-block btn-flat">Iniciar Sesión</button>
           </div><!-- /.col -->
         </div>
       </form>
-
-
-      <a href="#">I forgot my password</a><br>
 
     </div><!-- /.login-box-body -->
   </div><!-- /.login-box -->
