--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -42,7 +42,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">SENSA IT</a>
+					<a href="#" class="navbar-brand">SENSA IT QA</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
